objects/test_label__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>tests label</relationshipLabel>
        <relationshipName>tests_label</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>tests label</relationshipLabel>
        <relationshipName>tests_label</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentUser_Manager2__c</fullName>
        <formula>IF(User__r.Manager.Id = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentUser$Manager2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>tests_label</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>test label</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>test label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>tests label</pluralLabel>
    <recordTypes>
        <fullName>Ciudad</fullName>
        <active>true</active>
        <label>Ciudad</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rural</fullName>
        <active>true</active>
        <label>Rural</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>